# Agentic-Note-Management-System

./: .gitignore  README.md
.github/PULL_REQUEST_TEMPLATE/: bug-template.md  feature-template.md
agent_api/: pyproject.toml
agent_api/interfaces/: database_interface.py
agent_api/routers/: agents.client.py  agents.server.py
agent_api/schemas/: chat_session_schema.py  interaction_schema.py  role_enum_schema.py  session_schema.py
mcp.api/: pyproject.toml
mcp_api/: pyproject.toml
mcp_api/schemas/: output_text.py  output_type_enum.py
mcp_api/services/: file_handler.py
mcp_api/tools/: file_management.server.py  resource_manager.server.py
