[project]
name = "mcp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "mcp[cli]>=1.14.0",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["./mcp_api/"]
include = ["utils"]
